--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Romantic Birthday Animation Slideshow</title>
+    <title>FOR YOU</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       :root {
@@ -1090,3 +1090,4 @@
     </script>
   </body>
 </html>
+
